--- a/.github/workflows/mariadb.yml
+++ b/.github/workflows/mariadb.yml
@@ -18,38 +18,45 @@ jobs:
         run: |
           export DOCKER_CLI_EXPERIMENTAL=enabled
           repo="jleekwong/mariadb"
-          base="balenalib/raspberry-pi-debian"
-          variant="debian"
-          source sha_function.sh
-          debian_x86_sha=$(get_variant_sha "$variant" "latest" "amd64")
-          echo "$variant amd64"
-          echo $debian_x86_sha
-          variant_debian_x86_sha=$(get_manifest_sha "$repo:latest" "amd64")
-          echo "treehouses/$variant amd64"
-          echo $variant_debian_x86_sha
-          balena_rpi_sha=$(get_tag_sha "$base" "latest")
-          echo $balena_rpi_sha
-          variant_rpi_sha=$(get_manifest_sha "$repo:latest" "arm")
-          echo $variant_rpi_sha
-          debian_arm64_sha=$(get_variant_sha "$variant" "latest" "arm64")
-          echo $debian_arm64_sha
-          variant_debian_arm64_sha=$(get_manifest_sha "$repo:latest" "arm64")
-          echo $variant_debian_arm64_sha
-          flag=$(compare_sha  "$debian_x86_sha" "$variant_debian_x86_sha" "$balena_rpi_sha" "$variant_rpi_sha" "$debian_arm64_sha" "$variant_debian_arm64_sha")
+          base_64="mariadb:latest"
+          base_arm="linuxserver/mariadb:latest"
+          source .github/workflows/utils.sh
+
+          mariadb_amd64_sha=$(get_manifest_sha "$repo:latest" "amd64")
+          echo $mariadb_amd64_sha
+          base_amd64_sha=$(get_manifest_sha "$base_64:latest" "amd64")
+          echo $base_amd64_sha
+          flag_amd64=$(is_base "$repo@"$base_amd64_sha "$repo@"$mariadb_amd64_sha)
+          echo $flag_amd64
+          mariadb_arm64_sha=$(get_manifest_sha "$repo:latest" "arm64")
+          echo $mariadb_arm64_sha
+          base_arm64_sha=$(get_manifest_sha "$base_64:latest" "arm64")
+          echo $base_arm64_sha
+          flag_arm64=$(is_base "$repo@"$base_arm64_sha "$repo@"$mariadb_arm64_sha)
+          echo $flag_arm64
+          mariadb_arm_sha=$(get_manifest_sha "$repo:latest" "arm")
+          echo $mariadb_arm_sha
+          base_arm_sha=$(get_manifest_sha "$base_arm:latest" "arm")
+          echo $base_arm_sha
+          flag_arm=$(is_base "$repo@"$base_arm_sha "$repo@"$mariadb_arm_sha)
+          echo $flag_arm
+          flag=$(compare "$repo@"$base_arm_sha "$repo@"$mariadb_arm_sha "$repo@"$base_amd64_sha "$repo@"$mariadb_amd64_sha "$repo@"$base_arm64_sha "$repo@"$mariadb_arm64_sha)
           echo $flag
-          tag="3.12-$(date +%Y%m%d%H%M)"
-          tag2="latest"
-          echo $tag
-          docker manifest create $repo:$tag "$variant@"$debian_x86_sha "$base@"$balena_rpi_sha "$variant@"$debian_arm64_sha
-          docker manifest create $repo:latest "$variant@"$debian_x86_sha "$base@"$balena_rpi_sha "$variant@"$debian_arm64_sha
-          docker manifest annotate $repo:latest "$base@"$balena_rpi_sha --arch arm
-          docker manifest annotate $repo:$tag "$variant@"$debian_arm64_sha --arch arm64
-          docker manifest annotate $repo:latest "$variant@"$debian_arm64_sha --arch arm64
-          docker manifest annotate $repo:$tag "$base@"$balena_rpi_sha --arch arm
-          docker manifest inspect $repo:$tag
-          docker manifest inspect $repo:$tag2
-          if [[ $flag == true ]]; then
-            docker manifest push $repo:$tag; docker manifest push $repo:$tag2
-          else
-            echo "no changes"
-          fi
+          #if [[ $flag == true ]]; then
+          #  docker run --rm --privileged multiarch/qemu-user-static --reset -p yes
+          #  build_image "$base_arm:latest" arm "$repo"
+          #  build_image "$base_64:latest" amd64 "$repo"
+          #  build_image "$base_64:latest" arm64 "$repo"
+          #  deploy_image "$repo" arm
+          #  deploy_image "$repo" amd64
+          #  deploy_image "$repo" arm64
+          #  tag=$(date +%Y%m%d%H%M)
+          #  tag2="latest"
+          #  echo $tag
+          #  create_manifest $repo $tag $tag2 $repo-tags:amd64 $repo-tags:arm $repo-tags:arm64
+          #  docker manifest inspect $repo:$tag
+          #  docker manifest inspect $repo:$tag2
+          #  docker manifest push $repo:$tag; docker manifest push $repo:$tag2
+          #else
+          #  echo "no changes"
+          #fi
