--- a/.github/workflows/mariadb.yml
+++ b/.github/workflows/mariadb.yml
@@ -41,21 +41,21 @@ jobs:
           echo $flag_arm
           flag=$(compare "$repo@"$base_arm_sha "$repo@"$mariadb_arm_sha "$repo@"$base_amd64_sha "$repo@"$mariadb_amd64_sha "$repo@"$base_arm64_sha "$repo@"$mariadb_arm64_sha)
           echo $flag
-          #if [[ $flag == true ]]; then
-          #  docker run --rm --privileged multiarch/qemu-user-static --reset -p yes
-          #  build_image "$base_arm:latest" arm "$repo"
-          #  build_image "$base_64:latest" amd64 "$repo"
-          #  build_image "$base_64:latest" arm64 "$repo"
-          #  deploy_image "$repo" arm
-          #  deploy_image "$repo" amd64
-          #  deploy_image "$repo" arm64
-          #  tag=$(date +%Y%m%d%H%M)
-          #  tag2="latest"
-          #  echo $tag
-          #  create_manifest $repo $tag $tag2 $repo-tags:amd64 $repo-tags:arm $repo-tags:arm64
-          #  docker manifest inspect $repo:$tag
-          #  docker manifest inspect $repo:$tag2
-          #  docker manifest push $repo:$tag; docker manifest push $repo:$tag2
-          #else
-          #  echo "no changes"
-          #fi
+          if [[ $flag == true ]]; then
+            docker run --rm --privileged multiarch/qemu-user-static --reset -p yes
+            build_image "$base_arm:latest" arm "$repo"
+            build_image "$base_64:latest" amd64 "$repo"
+            build_image "$base_64:latest" arm64 "$repo"
+            deploy_image "$repo" arm
+            deploy_image "$repo" amd64
+            deploy_image "$repo" arm64
+            tag=$(date +%Y%m%d%H%M)
+            tag2="latest"
+            echo $tag
+            create_manifest $repo $tag $tag2 $repo-tags:amd64 $repo-tags:arm $repo-tags:arm64
+            docker manifest inspect $repo:$tag
+            docker manifest inspect $repo:$tag2
+            docker manifest push $repo:$tag; docker manifest push $repo:$tag2
+          else
+            echo "no changes"
+          fi
