--- a/.github/workflows/mariadb.yml
+++ b/.github/workflows/mariadb.yml
@@ -41,6 +41,7 @@ jobs:
           echo $flag_arm
           flag=$(compare "$repo@"$base_arm_sha "$repo@"$mariadb_arm_sha "$repo@"$base_amd64_sha "$repo@"$mariadb_amd64_sha "$repo@"$base_arm64_sha "$repo@"$mariadb_arm64_sha)
           echo $flag
+          flag=true
           if [[ $flag == true ]]; then
             docker run --rm --privileged multiarch/qemu-user-static --reset -p yes
             build_image "$base_arm:latest" arm "$repo"
