--- a/.github/workflows/mariadb.yml
+++ b/.github/workflows/mariadb.yml
@@ -45,7 +45,7 @@ jobs:
           if [[ $flag == true ]]; then
             docker run --rm --privileged multiarch/qemu-user-static --reset -p yes
             build_image "$base_arm:latest" arm "$repo"
-            #build_image "$base_64:latest" amd64 "$repo"
+            build_image "$base_64:latest" amd64 "$repo"
             #build_image "$base_64:latest" arm64 "$repo"
             #deploy_image "$repo" arm
             #deploy_image "$repo" amd64
