--- a/.github/workflows/mariadb.yml
+++ b/.github/workflows/mariadb.yml
@@ -46,12 +46,12 @@ jobs:
             tag=$(date +%Y%m%d%H%M)
             tag2="latest"
             echo $tag
-            docker manifest create $repo:$tag "debian@"$debian_x86_sha "balenalib/raspberry-pi-debian@"$balena_rpi_sha "debian@"$debian_arm64_sha
-            docker manifest create $repo:latest "debian@"$debian_x86_sha "balenalib/raspberry-pi-debian@"$balena_rpi_sha "debian@"$debian_arm64_sha
-            docker manifest annotate $repo:latest "balenalib/raspberry-pi-debian@"$balena_rpi_sha --arch arm
-            docker manifest annotate $repo:$tag "debian@"$debian_arm64_sha --arch arm64
-            docker manifest annotate $repo:latest "debian@"$debian_arm64_sha --arch arm64
-            docker manifest annotate $repo:$tag "balenalib/raspberry-pi-debian@"$balena_rpi_sha --arch arm
+            docker manifest create $repo:$tag "$repo@"$base_amd64_sha "$repo@"$base_arm64_sha "$repo@"$base_arm_sha
+            docker manifest create $repo:latest "$repo@"$base_amd64_sha "$repo@"$base_arm64_sha "$repo@"$base_arm_sha
+          #  docker manifest annotate $repo:latest "balenalib/raspberry-pi-debian@"$balena_rpi_sha --arch arm
+          #  docker manifest annotate $repo:$tag "debian@"$debian_arm64_sha --arch arm64
+          #  docker manifest annotate $repo:latest "debian@"$debian_arm64_sha --arch arm64
+          #  docker manifest annotate $repo:$tag "balenalib/raspberry-pi-debian@"$balena_rpi_sha --arch arm
           #  docker manifest inspect $repo:$tag
           #  docker manifest inspect $repo:$tag2
           #  docker manifest push $repo:$tag; docker manifest push $repo:$tag2
